force-app/main/default/objects/Solutions_Selling_Material__c/Solutions_Selling_Material__c.object-meta.xml
<CustomObject>
    <description>This object is used to track attachments associated with the Intapp Sales Methodology</description>
    <label>ISM Material</label>
    <nameField>
        <label>ISM Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISM Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>