force-app/main/default/objects/Solutions_Selling_Material__c/fields/Opportunity_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Text__c</fullName>
    <formula>Opportunity_Name__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>