force-app/main/default/objects/Solutions_Selling_Material__c/fields/Power_Sponsor_Mutual_Evaluation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Power_Sponsor_Mutual_Evaluation_Plan__c</fullName>
    <inlineHelpText>Weighted Score Multiplier: 3</inlineHelpText>
    <label>Mutual Evaluation Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 = not present</fullName>
            </value>
            <value>
                <fullName>1 = not agreed to by PS</fullName>
            </value>
            <value>
                <fullName>2 = missing 1 or more of 3 major sales components</fullName>
            </value>
            <value>
                <fullName>4 = contains operational/transitional/ &amp; mutually agreed to financial steps</fullName>
            </value>
            <value>
                <fullName>5 = contains all 3 major components, mutually agree to and all buying processes are represented (eg. Legal, technical, admin, etc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>