force-app/main/default/objects/Solutions_Selling_Material__c/fields/Power_Sponsor_Organizational_Impact__c.field-meta.xml
<CustomField>
    <fullName>Power_Sponsor_Organizational_Impact__c</fullName>
    <inlineHelpText>Weighted Score Multiplier: 1</inlineHelpText>
    <label>Organizational Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 = not present</fullName>
            </value>
            <value>
                <fullName>2 = titles, no names, no tie to Plan</fullName>
            </value>
            <value>
                <fullName>4 = titles and names, does not tie to Plan</fullName>
            </value>
            <value>
                <fullName>5 = titles and names, and ties to Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>