force-app/main/default/objects/Solutions_Selling_Material__c/recordTypes/Other_Solution_Selling_Material.recordType-meta.xml
<RecordType>
    <fullName>Other_Solution_Selling_Material</fullName>
    <active>true</active>
    <description>Use this record type for any ISM Materials that are not the Power Sponsor or Sponsor Confirmation Email.</description>
    <label>Other ISM Material</label>
</RecordType>