force-app/main/default/objects/Solutions_Selling_Material__c/recordTypes/Power_Sponsor_Confirmation_Email.recordType-meta.xml
<RecordType>
    <fullName>Power_Sponsor_Confirmation_Email</fullName>
    <active>true</active>
    <description>Use this record type for the Power Sponsor Confirmation Email</description>
    <label>Power Sponsor Confirmation Email</label>
</RecordType>