force-app/main/default/objects/Solutions_Selling_Material__c/recordTypes/Sponsor_Confirmation_Email.recordType-meta.xml
<RecordType>
    <fullName>Sponsor_Confirmation_Email</fullName>
    <active>true</active>
    <description>Use this record type for the Sponsor Confirmation Email</description>
    <label>Sponsor Confirmation Email</label>
</RecordType>